--- a/static/css/reset_pw_confirm.css
+++ b/static/css/reset_pw_confirm.css
@@ -63,7 +63,7 @@ main {
   border: 0;
   font-size: 1rem;
   border-radius: 0.5rem;
-  background-color: blue;
+  background-color: #2253ff;
   color: #fff;
   font-weight: 900;
 }
