--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -64,11 +64,13 @@
         <div class="input__edit__gender">
             {{ form.gender.errors }}
             <lable for="{{ form.gender.id_for_label }}"><p>성별</p></lable>
+            <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
             {{form.gender}}
         </div>
         <div class="input__edit__job">
             {{ form.job.errors }}
             <lable for="{{ form.job.id_for_label }}"><p>직업</p></lable>
+            <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
             {{form.job}}
         </div>
         <div>
