--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,21 +35,22 @@ body {
   font-weight: 600;
   font-size: 1rem;
   align-items: center;
-  z-index:1;
+  z-index: 999;
   max-width: 1200px;
   min-width: 1200px;
   width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
+  position: relative;
 }
 
-.navbar__logo{
+.navbar__logo {
   display: inline-flex;
   width: 10%;
 }
 
-.navbar__logo img{
+.navbar__logo img {
   width: 100%;
 }
 
@@ -103,15 +104,17 @@ body {
   align-items: center;
 }
 
-.base__dropdown li > a, .base__dropdown li > span {
+.base__dropdown li > a,
+.base__dropdown li > span {
   height: 100%;
 }
 
-.base__dropdown:hover, .base__dropdown a:hover {
+.base__dropdown:hover,
+.base__dropdown a:hover {
   color: #2253ff !important;
 }
 
-.base__dropdown:hover > .base__dropmenu{
+.base__dropdown:hover > .base__dropmenu {
   display: block;
 }
 
@@ -151,7 +154,7 @@ body {
 
 /* 프로필 드롭다운 메뉴 */
 
-.base__profile_dropbtn{
+.base__profile_dropbtn {
   display: flex;
   align-items: center;
   position: relative;
@@ -164,7 +167,7 @@ body {
   margin-right: 0.5rem;
 }
 
-.base__profile_dropbtn div img{
+.base__profile_dropbtn div img {
   display: inline-block;
   object-fit: cover;
   width: 100%;
@@ -172,7 +175,7 @@ body {
   border-radius: 80%;
 }
 
-.base__profile_dropbtn div i{
+.base__profile_dropbtn div i {
   font-size: 90%;
 }
 
@@ -199,6 +202,7 @@ body {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    z-index: 2;
   }
 
   .navbar__logo {
