--- a/static/css/login.css
+++ b/static/css/login.css
@@ -39,6 +39,7 @@ main .input {
 }
 
 .input__id input {
+  font-size: 1rem;
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -54,6 +55,7 @@ main .input {
 }
 
 .input__pw input {
+  font-size: 1rem;
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -69,12 +71,12 @@ main .input {
 
 .input__id input:focus {
   outline: none !important;
-  border: 1px solid blue;
+  border: 1px solid #2253ff;
 }
 
 .input__pw input:focus {
   outline: none !important;
-  border: 1px solid blue;
+  border: 1px solid #2253ff;
 }
 
 /*checkbox*/
@@ -131,9 +133,10 @@ main .align__cb span {
   outline: 0;
   border: 0;
   border-radius: 0.5rem;
-  background-color: rgb(47, 82, 245);
+  background-color: #2253ff;
   color: #fff;
   font-weight: 900;
+  font-size: 1.2rem;
 }
 
 #sub__menu {
