--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -178,7 +178,7 @@ input#input__reg__cb:checked + label:before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background: rgba(103, 99, 99, 0.25);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1.5px);
@@ -195,9 +195,11 @@ input#input__reg__cb:checked + label:before {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 35rem;
-  height: auto;
+  max-height: 40rem;
+  overflow-y: auto;
   position: relative;
-  padding: 10px;
+  padding: 20px 10px 10px 10px;
+  margin-top: 10rem;
 }
 #signup__modal-1 .modal__title {
   padding-left: 10px;
@@ -219,8 +221,9 @@ input#input__reg__cb:checked + label:before {
   margin-top: 20px;
   padding: 0px 10px;
   color: black;
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.3rem;
+  font-weight: 100;
 }
 
 #signup__modal-2.modal-overlay {
@@ -233,7 +236,7 @@ input#input__reg__cb:checked + label:before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background: rgba(103, 99, 99, 0.25);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1.5px);
@@ -250,9 +253,11 @@ input#input__reg__cb:checked + label:before {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   width: 35rem;
-  height: auto;
+  max-height: 40rem;
+  overflow-y: auto;
   position: relative;
-  padding: 10px;
+  padding: 20px 10px 10px 10px;
+  margin-top: 10rem;
 }
 #signup__modal-2 .modal__title {
   padding-left: 10px;
@@ -274,8 +279,9 @@ input#input__reg__cb:checked + label:before {
   margin-top: 20px;
   padding: 0px 10px;
   color: black;
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.3rem;
+  font-weight: 100;
 }
 /*모달*/
 
