--- a/users/templates/users/signout.html
+++ b/users/templates/users/signout.html
@@ -45,7 +45,7 @@
     {% csrf_token %}
     <div id="signout__cf__modal" class="modal-overlay">
       <div class="modal__window">
-        <div class="modal-close">x</div>
+        <div class="modal-close"><i class="fa-solid fa-xmark"></i></div>
         <div class="modal__content">
           <p style="margin-top: 3rem; font-size: 1.3rem; font-weight: 900">
             MOCO에서 탈퇴하시겠어요?
