--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{%static 'css/reset_pw_complete.css' %}" />
     <link rel="stylesheet" href="{%static 'css/find_pw.css' %}" />
     <link rel="stylesheet" href="{%static 'css/profile_edit.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/profile_add.css' %}" />
     <link rel="stylesheet" href="{%static 'css/signout.css' %}" />
     <script
       src="https://kit.fontawesome.com/f0c26c0bfa.js"
