--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <link rel="stylesheet" href="{% static 'css/profile_view.css' %}" />
     <link rel="stylesheet" href="{%static 'css/login.css' %}" />
     <link rel="stylesheet" href="{%static 'css/signup.css' %}" />
