--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/post_main_detail.css' %}" />
     <link rel="stylesheet" href="{% static 'css/post_main.css' %}" />
     <link rel="stylesheet" href="{% static 'css/review.css' %}" />
+    <script src="https://unpkg.com/@yaireo/tagify"></script>
     <script
       src="https://kit.fontawesome.com/f0c26c0bfa.js"
       crossorigin="anonymous"
@@ -25,6 +26,7 @@
     <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_write.css' %}" />
+    <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
     <title>MOCO</title>
   </head>
   <body>
