--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,7 @@ body {
   left: 0;
   right: 0;
   display: flex;
+  z-index: 1;
 }
 
 .navbar {
@@ -35,7 +36,7 @@ body {
   font-weight: 600;
   font-size: 1rem;
   align-items: center;
-  z-index:1;
+  z-index: 1;
   max-width: 1200px;
   min-width: 1200px;
   width: 100%;
@@ -44,12 +45,12 @@ body {
   justify-content: flex-start;
 }
 
-.navbar__logo{
+.navbar__logo {
   display: inline-flex;
-  width: 10%;
+  width: 100px;
 }
 
-.navbar__logo img{
+.navbar__logo img {
   width: 100%;
 }
 
@@ -103,15 +104,17 @@ body {
   align-items: center;
 }
 
-.base__dropdown li > a, .base__dropdown li > span {
+.base__dropdown li > a,
+.base__dropdown li > span {
   height: 100%;
 }
 
-.base__dropdown:hover, .base__dropdown a:hover {
+.base__dropdown:hover,
+.base__dropdown a:hover {
   color: #2253ff !important;
 }
 
-.base__dropdown:hover > .base__dropmenu{
+.base__dropdown:hover > .base__dropmenu {
   display: block;
 }
 
@@ -151,7 +154,7 @@ body {
 
 /* 프로필 드롭다운 메뉴 */
 
-.base__profile_dropbtn{
+.base__profile_dropbtn {
   display: flex;
   align-items: center;
   position: relative;
@@ -164,7 +167,7 @@ body {
   margin-right: 0.5rem;
 }
 
-.base__profile_dropbtn div img{
+.base__profile_dropbtn div img {
   display: inline-block;
   object-fit: cover;
   width: 100%;
@@ -172,7 +175,7 @@ body {
   border-radius: 80%;
 }
 
-.base__profile_dropbtn div i{
+.base__profile_dropbtn div i {
   font-size: 90%;
 }
 
