--- a/static/css/post_main_detail.css
+++ b/static/css/post_main_detail.css
@@ -506,6 +506,15 @@
   display: none;
 }
 
+#main_detail__delete_modal_2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
 .main_detail__delete_modal__overlay {
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
@@ -534,5 +543,9 @@
 }
 
 #main_detail__delete_modal_btn {
+  cursor: pointer;
+}
+
+#main_detail__delete_modal_btn_2 {
   cursor: pointer;
 }
