--- a/static/css/review.css
+++ b/static/css/review.css
@@ -1,20 +1,9 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-input,
-img {
-  margin: 0;
-  padding: 0;
-}
-
 #review__page_title {
   border-bottom: 1px solid rgb(162, 162, 162);
   padding-top: 190px;
   padding-bottom: 30px;
   font-size: 1.5rem;
+  width: 100%;
 }
 
 .review__contents_box {
@@ -23,6 +12,7 @@ img {
   padding-bottom: 20px;
   border-bottom: 1px solid rgb(162, 162, 162);
   cursor: pointer;
+  width: 100%;
 }
 
 .review__contents_box__img {
