[fix]post_write 버튼 수정

--- a/posts/templates/posts/main_write.html
+++ b/posts/templates/posts/main_write.html
@@ -149,7 +149,7 @@
           <a onclick="">취소</a>
         </div>
         <div id="main_write__register_modal_btn">
-          <a onclick="postWriteForm_check();">등록하기</a>
+          <a onclick="">등록하기</a>
         </div>
         <!--여기 포스트가 잘 만들어졌다는 걸 if문으로 처리하려면 뭘 넣어야 할까-->
       </div>
@@ -159,7 +159,7 @@
         <div class="post_write__modal__content">
           <div class="post_write__modal__close_btn">X</div>
           <h1>글쓰기가 완료되었습니다!</h1>
-          <button class="post_write__register__complete_btn" type="button">
+          <button class="post_write__register__complete_btn" type="submit">
             등록하기
           </button>
         </div>
