[style] place css 수정

--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_update.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_write.css' %}" />
     <title>MOCO</title>
   </head>
