--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -6,7 +6,13 @@
     <div class="content-title">
       <div class="content-title__name">{{place.name}}</div>
       <div class="content-title__info">
-        <span class="content-title__img"><i class="fa-solid fa-circle-user"></i></span>
+        <span class="content-title__img">
+          {% if user.profile_img %}
+            <div class="profile_img"><img src="{{user.profile_img.url}}" alt="profile_img"></img></div>
+            {% else %}
+            <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
+            {% endif %}
+        </span>
         <span class="content-title__location">{{place.user}}</span>
         <span class="content-title__bar">|</span>
         <span class="content-title__published">{{place.published_at|date:"Y. m. d" }}</span>
