--- a/static/css/place_detail.css
+++ b/static/css/place_detail.css
@@ -270,3 +270,24 @@
   color: #2253ff;
   font-size: 14px;
 }
+
+/* 프로필 사진 */
+
+.content-title__img .profile_img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
+}
+
+.profile_img img {
+  display: inline-block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 80%;
+}
+
+.content-box__profile {
+  display: flex;
+  align-items: center;
+}
