--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -30,7 +30,7 @@
   <body>
     <div class="wrap">
       <nav class="navbar">
-        <a class="navbar__logo" href="{% url 'posts:home' %}">
+        <a class="navbar__logo" href="{% url 'users:main' %}">
           <img src="{% static "img/moco_logo.png" %}" alt="profile_img"></img>
         </a>
 
