--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,6 +40,7 @@ body {
   max-width: 1200px;
   min-width: 1200px;
   width: 100%;
+  height: 65px;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
@@ -120,6 +121,7 @@ body {
 }
 
 .base__dropmenu {
+  display: none;
   opacity: 0;
   position: absolute;
   z-index: 1; /*다른 요소들보다 앞에 배치*/
@@ -183,10 +185,6 @@ body {
 .base__profile_dropdown:hover .base__profile_dropmenu {
   display: block;
   opacity: 1;
-}
-
-.navbar__toggleBtn {
-  display: none;
 }
 
 /* 반응형 */
